<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">enter your email</string>
    <string name="password_hint">"enter password "</string>
    <string name="sign_up_button">SignUp</string>
    <string name="login_button">LogIn</string>
    <string name="welcome_header">Welcome to ShoeStore</string>
    <string name="welcome_body">In this app you will be able to store a list of shoes for your customers to view. You will input shoe details of shoes you are looking to sell to your customers. Move on to instructions to learn more about starting your inventory!</string>
    <string name="to_instructions_button">Instructions</string>
    <string name="instructions_header">Instructions</string>
    <string name="instructions_body">"In the following screen you will see a list of shoes you've added. You will click \"add shoe\" button to add shoe details in \"add shoe details\" screen. "</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_list_header">Shoes</string>
    <string name="add_shoe_details">Add Shoe Details</string>
    <string name="add_shoe_name_hint">enter shoe name</string>
    <string name="add_shoe_company">enter shoe company</string>
    <string name="enter_shoe_size_hint">enter shoe size</string>
    <string name="enter_shoe_description_hint">enter shoe description</string>
    <string name="shoe_detail_cancel_button">Cancel</string>
    <string name="shoe_detail_save_button">Save</string>
</resources>
