<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoeDetail.ShoeDetail">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addShoeDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_shoe_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/addShoeNameEditText"
            android:text="@={shoe.name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/add_shoe_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/addShoeCompanyEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addShoeDetails" />

        <EditText
            android:id="@+id/addShoeCompanyEditText"
            android:text="@={shoe.company}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/add_shoe_company"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/addShoeSizeEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addShoeNameEditText" />

        <EditText
            android:id="@+id/addShoeSizeEditText"
            android:text="@={`` + shoe.size}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/enter_shoe_size_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/addShoeDescriptionEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addShoeCompanyEditText" />

        <EditText
            android:id="@+id/addShoeDescriptionEditText"
            android:text="@={shoe.description}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/enter_shoe_description_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/shoeDetailCancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addShoeSizeEditText" />

        <Button
            android:id="@+id/shoeDetailCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:text="@string/shoe_detail_cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/addShoeDescriptionEditText"
            app:layout_constraintTop_toTopOf="@+id/shoeDetailSaveButton" />

        <Button
            android:id="@+id/shoeDetailSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:text="@string/shoe_detail_save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addShoeDescriptionEditText"
            app:layout_constraintStart_toEndOf="@+id/shoeDetailCancelButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>